testsuite/tests/checks/deep_library/test.out
realy-realy-realy-deep-pkg.ads:1:9: error: deep_library_hierarchy - rule violation
1 | package Realy.Realy.Realy.Deep.Pkg is
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

